[build-system]
requires = ["setuptools", "scikit-build", "cmake", "numpy"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
skip = ["pp*", "*-win32", "*-manylinux_i686", "*-musllinux*", "cp36-*"]
manylinux-x86_64-image = "manylinux2014"
manylinux-aarch64-image = "manylinux2014"

[tool.pytest.ini_options]
addopts = "--benchmark-skip"
testpaths = ["test"]
